feat: implement feature send e-mail and reset password
